# ani-gamer-pro

./: .gitignore  Cargo.toml  features-todo.md
.config/: nextest.toml
crates/ani-dock-core/: Cargo.toml
crates/ani-dock-core/src/: config.rs  constant.rs  ffmpeg.rs  lib.rs  sn_list.rs  util.rs
crates/ani-dock-core/src/anime/: constant.rs  episode.rs  error.rs  mod.rs
crates/ani-dock-core/src/request/: anime_video.rs  common.rs
src/: anime_episode.rs  config.rs  constant.rs  cookie.rs  device_id.rs  error.rs  ffmpeg.rs  lib.rs  request.rs  sn_list.rs  util.rs
src/anime/: episode.rs  episode_detail.rs  error.rs  mod.rs  util.rs
src/request/: common.rs  device_id.rs  playlist.rs  token.rs
tests/e2e/: .gitignore  Cargo.toml
tests/e2e/src/: common.rs  download_3499.rs  lib.rs
tests/fixture/: animeVideo-sn-3499.formatted.html  animeVideo-sn-49903.formatted.html
