[package]
name = "ani-gamer-pro"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs"] }
toml = "1.1.2"
directories = "6.0.0"

[dev-dependencies]
anyhow = "1.0.103"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
