[package]
name = "ani-gamer-pro"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "2"
members = ["tests/e2e"]

[workspace.dependencies]
ani-gamer-pro = { path = "." }

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["fs", "process"] }
toml = "1.1.2"
directories = "6.0.0"
domparser = "0.0.7"
wreq = { version = "5.3.0", features = [
  "cookies",
  "cookies-preserve-order",
  "deflate",
  "gzip",
  "json",
] }
wreq-util = "2.2.6"
url = "2.5.8"
indexmap = { version = "2.14.0", features = ["serde"] }
regex = "1.13.0"
serde_json = "1.0.150"
rand = "0.10.2"
tracing = "0.1.44"
m3u8-rs = "6.0.0"
nom = "7.1.3"
bytes = "1.12.1"
futures = "0.3.33"

[dev-dependencies]
anyhow = "1.0.103"
tokio = { version = "1.52.3", features = ["macros", "rt"] }
